Save local changes

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cbnts",
   "version": "0.0.1",
   "private": true,
+  "homepage": "http://doodybrains.github.io/cbnts",
   "devDependencies": {
     "react-scripts": "0.2.1"
   },
